# TP3-Econo

./: 17_Industry_Portfolios.csv  LICENSE  README.md  TP3 Q1.ipynb  TP3 Q2.ipynb  TP3.ipynb  pyproject.toml
